<resources>
    <string name="app_name">Words</string>

    <string name="product_image">product image</string>

    <string name="email">Email</string>
    <string name="name">Nama</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="email_error">Email tidak boleh kosong!</string>
    <string name="name_error">Nama tidak boleh kosong!</string>
    <string name="password_error">Password tidak boleh kosong!</string>
    <string name="invalid_password">Password harus > 8 karakter</string>
    <string name="unmatch_password">Password tidak sama</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name_value">Binarian</string>
    <string name="email_value">binarian@example.com</string>
    <string name="logout">Logout</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="blur">Blur Image</string>
    <string name="cancel_blur">Cancel Blur</string>
    <string name="profile_image">profile image</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="kamera">Kamera</string>
    <string name="galeri">Galeri</string>
    <string name="add_favorite_success">Berhasil ditambahkan ke favorit</string>
    <string name="delete_favorite_success">Berhasil dihapus dari favorit</string>
    <string name="login_berhasil">Login Berhasil</string>
    <string name="permission_denied">permission ditolak</string>
    <string name="permission_accepted">permission diterima</string>
    <string name="register_berhasil">Register Berhasil</string>
</resources>